--- a/TODO.txt
+++ b/TODO.txt
@@ -82,9 +82,9 @@ use rotateX 3d transition for driving over rough ground
 X remove current collidible code
 X render building boundries
 X make tiles not drag-selectable so drags don't spike CPU
-add building boundries creation
-add building entrance creation
-name buildings
+X add building boundries creation
+X add building entrance creation
+X name buildings
 update to use new sprite rendering code
 
 *ART*
