update TODO once again

--- a/TODO.txt
+++ b/TODO.txt
@@ -85,6 +85,7 @@ X make tiles not drag-selectable so drags don't spike CPU
 X add building boundries creation
 X add building entrance creation
 X name buildings
+support adding full buildings
 update to use new sprite rendering code
 
 *ART*
