--- a/TODO.txt
+++ b/TODO.txt
@@ -80,6 +80,7 @@ add dude roll/damage when jumping out of car
 use rotateX 3d transition for driving over rough ground
 make zombies walk at different speeds
 add inventory/hud toggle button
+fix collision response
 
 *EDITOR*
 X remove current collidible code
