--- a/TODO.txt
+++ b/TODO.txt
@@ -113,13 +113,13 @@ X trees
 X house
 X add spiderwebbed windows to car's sprite
 X add destroyed car state to car's sprite
+X add custom cursor for filling up the gas tank
 update color on gas station
 crate sprite
 shrubs
 clean up zombie's standing legs (make back leg angle outward)
 add L&R hand graphics to DudeHands HUD
 add custom cursor hand graphics for inventory
-add custom cursor hand graphics for filling up the gas tank
 add zombie hit car animation
 
 *CARS*
@@ -140,6 +140,7 @@ X 9mm ammo
 X bat
 X cake
 X medkit
+X gas can
 lantern
 rifle
 golf club
@@ -147,7 +148,6 @@ rubber hose
 spare tire
 rifle ammo
 food
-gas can
 twinkie
 hot dog
 can of beans
