create a sprites TODO category

--- a/TODO.txt
+++ b/TODO.txt
@@ -111,15 +111,12 @@ X shack
 X fuel gauge tick markers
 X clean up extra pixel when rendering arms with rifle
 X police station
-X trees
 X house
 X add spiderwebbed windows to car's sprite
 X add destroyed car state to car's sprite
 X add custom cursor for filling up the gas tank
 X add L&R hand graphics to DudeHands HUD
 update color on gas station
-crate sprite
-shrubs
 clean up zombie's standing legs (make back leg angle outward)
 add custom cursor hand graphics for inventory
 add zombie hit car animation
@@ -153,3 +150,11 @@ food
 twinkie
 hot dog
 can of beans
+
+*SPRITES*
+X trees
+shrubs
+crate
+stop sign
+mailbox
+streetlight
