--- a/TODO.txt
+++ b/TODO.txt
@@ -86,6 +86,7 @@ explosions should cause dude/zombie damage
 support CMD-click on inventory as left-click
 some cars can take more damage than other
 make gunfire light up night
+make mapworker work when WebWorkers aren't supported
 
 *EDITOR*
 X remove current collidible code
