--- a/TODO.txt
+++ b/TODO.txt
@@ -61,6 +61,8 @@ X transfering fuel between cars
 X make tip not obscure sprites
 X headlight cone should not stop rendering if car is off screen
 X make zombies attracted to noise
+X fix screen slide when dude enters house while moving
+X fix dude aim arm sticks around when entering car
 make zombie collision response more natural
 add drag to car
 create another gas station section on straightaway
@@ -93,8 +95,6 @@ damage car when it drives over rough ground
 game over screen
 intro screen
 cheat sheet
-fix screen slide when dude enters house while moving
-fix dude aim arm sticks around when entering car
 double-clicking stackable items should stack them when moved
 zombies should do damage from above and below
 keep track of statistics
