--- a/TODO.txt
+++ b/TODO.txt
@@ -66,13 +66,12 @@ X fix dude aim arm sticks around when entering car
 X make zombies follow building edges
 X double-clicking stackable items should stack them when moved
 X fix destroyed car 'sliding'
-fix house/garage collision weirdness
+X fix house/garage collision weirdness
 make zombie collision response more natural
 add drag to car
 create another gas station section on straightaway
 add map handling functions for custom instances of sections through the map worker
 tune Honda's performance
-make trees transparent when touching sprite
 convert everything to radians
 generalize sprite animation handling
 HUD ammo count
@@ -99,6 +98,8 @@ intro screen
 cheat sheet
 zombies should do damage from above and below
 keep track of statistics
+fix sprite placement by MapWorker so it avoids buildings
+only render check engine light when lit -- inventory doesn't need to be up
 
 *EDITOR*
 X remove current collidible code
