--- a/TODO.txt
+++ b/TODO.txt
@@ -69,6 +69,7 @@ X fix destroyed car 'sliding'
 X fix house/garage collision weirdness
 X fix zombie counts -- too many added too quickly
 X fix zombie hitbox
+X broken headlights
 make zombie collision response more natural
 add drag to car
 create another gas station section on straightaway
@@ -77,7 +78,6 @@ tune Honda's performance
 convert everything to radians
 generalize sprite animation handling
 HUD ammo count
-broken headlights
 headlight repair
 fix barrel 'sliding'
 support shooting out of car
