--- a/TODO.txt
+++ b/TODO.txt
@@ -71,6 +71,7 @@ X fix zombie counts -- too many added too quickly
 X fix zombie hitbox
 X broken headlights
 X create another gas station section on straightaway
+X fix barrel 'sliding'
 make zombie collision response more natural
 add drag to car
 add map handling functions for custom instances of sections through the map worker
@@ -79,7 +80,6 @@ convert everything to radians
 generalize sprite animation handling
 HUD ammo count
 headlight repair
-fix barrel 'sliding'
 support shooting out of car
 gas pumps can take damage
 make zombies attracted to light
