--- a/TODO.txt
+++ b/TODO.txt
@@ -72,6 +72,7 @@ X fix zombie hitbox
 X broken headlights
 X create another gas station section on straightaway
 X fix barrel 'sliding'
+X game over screen
 make zombie collision response more natural
 add drag to car
 add map handling functions for custom instances of sections through the map worker
@@ -94,7 +95,6 @@ make gunfire light up night
 make mapworker work when WebWorkers aren't supported
 fix zombie wiggle
 damage car when it drives over rough ground
-game over screen
 intro screen
 cheat sheet
 zombies should do damage from above and below
