--- a/TODO.txt
+++ b/TODO.txt
@@ -74,6 +74,7 @@ X create another gas station section on straightaway
 X fix barrel 'sliding'
 X game over screen
 X only render check engine light when lit -- inventory doesn't need to be up
+X damage car when it drives over rough ground
 make zombie collision response more natural
 add drag to car
 add map handling functions for custom instances of sections through the map worker
@@ -95,7 +96,6 @@ some cars can take more damage than other
 make gunfire light up night
 make mapworker work when WebWorkers aren't supported
 fix zombie wiggle
-damage car when it drives over rough ground
 intro screen
 cheat sheet
 zombies should do damage from above and below
@@ -105,6 +105,8 @@ render gas guage when fuel is low even if inventory isn't up
 when dude leaves building/car make sure he's not inside another sprite
 add dead ends
 show low fuel light like the check engine light
+fix sideways gas pumps collision bounds
+create start map
 
 *EDITOR*
 X remove current collidible code
