--- a/TODO.txt
+++ b/TODO.txt
@@ -75,38 +75,30 @@ X fix barrel 'sliding'
 X game over screen
 X only render check engine light when lit -- inventory doesn't need to be up
 X damage car when it drives over rough ground
-make zombie collision response more natural
 add drag to car
-add map handling functions for custom instances of sections through the map worker
 tune Honda's performance
-convert everything to radians
-generalize sprite animation handling
 HUD ammo count
 headlight repair
-support shooting out of car
-gas pumps can take damage
 make zombies attracted to light
 firearm reload times
 firearm between shot timeout
-add dude roll/damage when jumping out of car
 add inventory/hud toggle button
 explosions should cause dude/zombie damage
 support CMD-click on inventory as left-click
 some cars can take more damage than other
 make gunfire light up night
-make mapworker work when WebWorkers aren't supported
 fix zombie wiggle
 intro screen
 cheat sheet
-zombies should do damage from above and below
 keep track of statistics
 fix sprite placement by MapWorker so it avoids buildings
-render gas guage when fuel is low even if inventory isn't up
 when dude leaves building/car make sure he's not inside another sprite
 add dead ends
 show low fuel light like the check engine light
 fix sideways gas pumps collision bounds
 create start map
+support FF
+fix cursor rendering when left click on fuelee inventory item
 
 *EDITOR*
 X remove current collidible code
@@ -180,3 +172,13 @@ shrubs
 crate
 mailbox
 streetlight
+
+*WISHLIST*
+add map handling functions for custom instances of sections through the map worker
+make zombie collision response more natural
+convert everything to radians
+generalize sprite animation handling
+support shooting out of car
+gas pumps can take damage
+add dude roll/damage when jumping out of car
+make mapworker work when WebWorkers aren't supported
