--- a/TODO.txt
+++ b/TODO.txt
@@ -127,9 +127,10 @@ X add building boundries creation
 X add building entrance creation
 X name buildings
 X don't render all building outlines when adding entrances
-support adding full buildings
+X support adding full buildings
 support dragging building points
 update to use new sprite rendering code
+support setting building inventory list keys
 
 *ART*
 X add rifle/shotgun to dude's sprite
