--- a/TODO.txt
+++ b/TODO.txt
@@ -105,12 +105,12 @@ X fix gas can no drag bug
 X limit map scrolling offset so car doesn't go off screen (see police car)
 X Sprites sometimes stick to the edge of the screen when they move out of view
 X Dude leaves a ghost when entering car on Safari
+X inventory isn't saved in proper position
 fix sideways gas pumps collision bounds
 fix car reverse
 fix zombie sticking to walls
 can't hold drag an item then drop it into another car/building
 clear rubber hose cursor better
-inventory isn't saved in proper position
 tiles in front of gas station are not considered road
 miles display sometimes shows lots of decimals
 car color is not saved
