--- a/TODO.txt
+++ b/TODO.txt
@@ -81,6 +81,7 @@ X explosions should cause dude/zombie damage
 X fix sprite placement by MapWorker so it avoids buildings
 X make gunfire light up night
 X create start map
+X make cars created on parking spots turn to fit in the spot
 add drag to car
 tune Honda's performance
 HUD ammo count
@@ -97,7 +98,6 @@ cheat sheet
 keep track of statistics
 add dead ends
 show low fuel light like the check engine light
-make cars created on parking spots turn to fit in the spot
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
