tiles in front of gas station now considered roads

--- a/TODO.txt
+++ b/TODO.txt
@@ -110,10 +110,10 @@ X inventory isn't saved in proper position
 X fix zombie sticking to walls
 X after use rubber hose gas can is no longer draggable
 X clear rubber hose cursor better
+X tiles in front of gas station are not considered road
 fix sideways gas pumps collision bounds
 fix car reverse
 can't hold drag an item then drop it into another car/building
-tiles in front of gas station are not considered road
 miles display sometimes shows lots of decimals
 car color is not saved
 sometimes loaded wrecked cars spin when hit
