--- a/TODO.txt
+++ b/TODO.txt
@@ -112,11 +112,11 @@ X after use rubber hose gas can is no longer draggable
 X clear rubber hose cursor better
 X tiles in front of gas station are not considered road
 X sometimes loaded wrecked cars spin when hit
+X car color is not saved
 fix sideways gas pumps collision bounds
 fix car reverse
 can't hold drag an item then drop it into another car/building
 miles display sometimes shows lots of decimals
-car color is not saved
 cars are drawn on top of trees
 Zombies are drawn on top of trees
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
