--- a/TODO.txt
+++ b/TODO.txt
@@ -113,12 +113,11 @@ X clear rubber hose cursor better
 X tiles in front of gas station are not considered road
 X sometimes loaded wrecked cars spin when hit
 X car color is not saved
+X miles display sometimes shows lots of decimals
 fix sideways gas pumps collision bounds
 fix car reverse
 can't hold drag an item then drop it into another car/building
-miles display sometimes shows lots of decimals
-cars are drawn on top of trees
-Zombies are drawn on top of trees
+Sprites are sometimes drawn on top of trees
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 Sometimes the siphon goes in the wrong direction
 Can siphon gas from a car into itself
