--- a/TODO.txt
+++ b/TODO.txt
@@ -109,18 +109,17 @@ X Dude leaves a ghost when entering car on Safari
 X inventory isn't saved in proper position
 X fix zombie sticking to walls
 X after use rubber hose gas can is no longer draggable
-X clear rubber hose cursor better
 X tiles in front of gas station are not considered road
 X sometimes loaded wrecked cars spin when hit
 X car color is not saved
 X miles display sometimes shows lots of decimals
+clear rubber hose cursor better
 fix sideways gas pumps collision bounds
 fix car reverse
 can't hold drag an item then drop it into another car/building
 Sprites are sometimes drawn on top of trees
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 Sometimes the siphon goes in the wrong direction
-Can siphon gas from a car into itself
 
 *EDITOR*
 X remove current collidible code
