--- a/TODO.txt
+++ b/TODO.txt
@@ -99,6 +99,7 @@ cheat sheet
 keep track of statistics
 add dead ends
 stagger the two section loads when shifting the level
+try using dirty regions for sky
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
