--- a/TODO.txt
+++ b/TODO.txt
@@ -83,6 +83,7 @@ X make gunfire light up night
 X create start map
 X make cars created on parking spots turn to fit in the spot
 X show low fuel light like the check engine light
+X retry button
 add drag to car
 tune Honda's performance
 HUD ammo count
@@ -99,7 +100,6 @@ cheat sheet
 keep track of statistics
 add dead ends
 show building inventory when first entering and fade after a second
-retry button
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
