--- a/TODO.txt
+++ b/TODO.txt
@@ -100,6 +100,7 @@ intro screen
 cheat sheet
 keep track of statistics
 add dead ends
+nuclear blast after time elapses
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
@@ -124,6 +125,7 @@ If run into gas pump when map is scrolling and keep holding move key down, the g
 Sometimes the siphon goes in the wrong direction
 walking into car at angle against a building dude is pushed inside building
 dude's aiming arms are rendering behind his body
+shouldn't be able to move around after time elapses
 
 *EDITOR*
 X remove current collidible code
