--- a/TODO.txt
+++ b/TODO.txt
@@ -118,14 +118,15 @@ X car color is not saved
 X miles display sometimes shows lots of decimals
 X Sprites are sometimes drawn on top of trees
 X fix car reverse
+X dude's aiming arms are rendering behind his body
 clear rubber hose cursor better
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
 If run into gas pump when map is scrolling and keep holding move key down, the gas pump tool tip can continue scrolling
 Sometimes the siphon goes in the wrong direction
 walking into car at angle against a building dude is pushed inside building
-dude's aiming arms are rendering behind his body
 shouldn't be able to move around after time elapses
+inventory item gets stuck to cursor if dude dies while you're holding it
 
 *EDITOR*
 X remove current collidible code
