--- a/TODO.txt
+++ b/TODO.txt
@@ -119,6 +119,7 @@ X miles display sometimes shows lots of decimals
 X Sprites are sometimes drawn on top of trees
 X fix car reverse
 X dude's aiming arms are rendering behind his body
+X inventory item gets stuck to cursor if dude dies while you're holding it
 clear rubber hose cursor better
 fix sideways gas pumps collision bounds
 can't hold drag an item then drop it into another car/building
@@ -126,7 +127,6 @@ If run into gas pump when map is scrolling and keep holding move key down, the g
 Sometimes the siphon goes in the wrong direction
 walking into car at angle against a building dude is pushed inside building
 shouldn't be able to move around after time elapses
-inventory item gets stuck to cursor if dude dies while you're holding it
 
 *EDITOR*
 X remove current collidible code
